--- a/ivy.xml
+++ b/ivy.xml
@@ -4,5 +4,7 @@
   <dependencies>
     <dependency org="org.jboss.netty" name="netty" rev="3.2.4.Final" />
     <dependency org="org.jruby" name="jruby-complete" rev="1.6.0" />
+    <dependency org="junit" name="junit" rev="4.8.2" />
+    <dependency org="org.jboss.apiviz" name="apiviz" rev="1.3.1.GA" />
   </dependencies>
 </ivy-module>
