--- a/ivy.xml
+++ b/ivy.xml
@@ -6,6 +6,6 @@
     <dependency org="org.jruby" name="jruby-complete" rev="1.6.0" />
     <dependency org="junit" name="junit" rev="4.8.2" />
     <dependency org="org.jboss.apiviz" name="apiviz" rev="1.3.1.GA" />
+    <dependency org="commons-collections" name="commons-collections" rev="3.2.1" />
   </dependencies>
 </ivy-module>
-
