--- a/ivy.xml
+++ b/ivy.xml
@@ -6,6 +6,7 @@
     <dependency org="org.jruby" name="jruby-complete" rev="1.6.2" />
     <dependency org="junit" name="junit" rev="4.8.2" />
     <dependency org="org.jboss.apiviz" name="apiviz" rev="1.3.1.GA" />
+    <dependency org="com.google.guava" name="guava" rev="r08" />
   </dependencies>
 </ivy-module>
 
